--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ethos-design-system",
-  "version": "1.1.0",
-  "description": "Ethos Design System",
+  "version": "1.1.3-font-experiment",
+  "description": "Ethos Design System v1",
   "main": "./build/bundle.js",
   "license": "UNLICENSED",
   "scripts": {
