--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ethos-design-system",
-  "version": "1.1.4-k",
+  "version": "1.1.4-j",
   "description": "Ethos Design System v1",
   "main": "./build/bundle.js",
   "license": "UNLICENSED",
